Git_WGBH_QC/src/objects/Package_Item__c.object
<CustomObject>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Packages</relationshipLabel>
        <relationshipName>Packages_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PackageCode__c</fullName>
        <formula>Package__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PackageCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <label>Package</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Packages_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Package/Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Item__c</columns>
        <columns>Package__c</columns>
        <columns>PackageCode__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PI-{0000000000}</displayFormat>
        <label>Package/Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Packages/Items</pluralLabel>
    <recordTypes>
        <fullName>Package_Item</fullName>
        <active>true</active>
        <label>Package/Item</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>